--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/Pricing/PriceListEditorControl.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/Pricing/PriceListEditorControl.xaml
@@ -81,7 +81,7 @@
                         <Setter.Value>
                             <ContextMenu DataContext="{Binding RelativeSource={RelativeSource Mode=Self}, Path=PlacementTarget.Tag}">
                                 <MenuItem Header="Редактировать" FontWeight="Bold" Command="{Binding EditPricePositionCommand}"
-                                          InputGestureText="F2"/>
+                                          InputGestureText="Enter"/>
                                 <MenuItem Header="Удалить" Command="{Binding DeletePricePositionCommand}"
                                           InputGestureText="Delete"/>
                             </ContextMenu>
@@ -92,7 +92,7 @@
             <DataGrid.InputBindings>
                 <KeyBinding Key="N" Modifiers="Control"
                             Command="{Binding AddPricePositionCommand}"/>
-                <KeyBinding Key="F2"
+                <KeyBinding Key="Enter"
                             Command="{Binding EditPricePositionCommand}"/>
                 <KeyBinding Key="Delete"
                             Command="{Binding DeletePricePositionCommand}"/>
