--- a/src/Germadent.Rms.App/Views/MainWindow.xaml
+++ b/src/Germadent.Rms.App/Views/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:helpers="clr-namespace:Germadent.UI.Helpers;assembly=Germadent.UI"
         xmlns:viewModels="clr-namespace:Germadent.Client.Common.ViewModels;assembly=Germadent.Client.Common"
+        xmlns:controls="clr-namespace:Germadent.UI.Controls;assembly=Germadent.UI"
         mc:Ignorable="d"
         Title="{Binding Title}" 
         MinWidth="1024"
@@ -17,7 +18,6 @@
         FocusManager.FocusedElement="{Binding ElementName=SearchComboBox}">
     <Grid Margin="12">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
@@ -27,13 +27,24 @@
         </Grid.ColumnDefinitions>
 
         <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Vertical">
+            <controls:SearchComboBox x:Name="SearchComboBox" Height="23" Margin="0,0,0,0"
+                                     LabelText="Поиск заказ-нарядов" 
+                                     SearchEventTimeDelay="00:00:3"
+                                     SearchText="{Binding SearchString, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+
             <TextBlock Text="Работа с заказ-нарядами" VerticalAlignment="Center" Margin="0,24,0,0" FontSize="10"/>
 
             <Button Content="Открыть З-Н" Margin="0,6,0,0"
                     Command="{Binding OpenOrderCommand}"/>
 
-            <Button Content="Список работ по З-Н" Margin="0,6,0,0"
-                    Command="{Binding WorkListCommand}"/>
+            <!--<Button Content="Список работ по З-Н" Margin="0,6,0,0"
+                    Command="{Binding WorkListCommand}"/>-->
+
+            <Button Content="Распечатать З-Н" Margin="0,6,0,0"
+                    Command="{Binding PrintOrderCommand}"/>
+
+            <Button Content="Настроить фильтр" Margin="0,6,0,0"
+                    Command="{Binding FilterOrdersCommand}"/>
         </StackPanel>
 
         <DataGrid x:Name="OrdersGrid" Grid.Column="1" Grid.Row="0" Margin="6,0,0,0"
@@ -58,8 +69,6 @@
                             Key="Enter"/>
                 <KeyBinding Command="{Binding PrintOrderCommand}"
                             Key="P" Modifiers="Control"/>
-                <KeyBinding Command="{Binding CloseOrderCommand}"
-                            Key="C" Modifiers="Control+Shift"/>
             </DataGrid.InputBindings>
             <DataGrid.RowStyle>
                 <Style TargetType="{x:Type DataGridRow}" BasedOn="{StaticResource DataGridRowStyle}"
@@ -69,13 +78,10 @@
                     <Setter Property="ContextMenu">
                         <Setter.Value>
                             <ContextMenu DataContext="{Binding RelativeSource={RelativeSource Mode=Self}, Path=PlacementTarget.Tag}">
-                                <MenuItem Header="Редактировать" FontWeight="Bold" Command="{Binding OpenOrderCommand}"
+                                <MenuItem Header="Открыть" FontWeight="Bold" Command="{Binding OpenOrderCommand}"
                                           InputGestureText="Enter"/>
                                 <MenuItem Header="Распечатать" Command="{Binding PrintOrderCommand}"
                                           InputGestureText="Ctrl+P"/>
-                                <MenuItem Header="Копировать в Excel" Command="{Binding CopyOrderToClipboardCommand}"/>
-                                <Separator/>
-                                <MenuItem Header="Закрыть" Command="{Binding CloseOrderCommand}"/>
                             </ContextMenu>
                         </Setter.Value>
                     </Setter>
