--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/MainWindow.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/MainWindow.xaml
@@ -7,6 +7,7 @@
         xmlns:designMock="clr-namespace:Germadent.Rma.App.Views.DesignMock"
         xmlns:viewModels="clr-namespace:Germadent.Rma.App.ViewModels"
         xmlns:helpers="clr-namespace:Germadent.UI.Helpers;assembly=Germadent.UI"
+        xmlns:viewModelsCommon="clr-namespace:Germadent.Client.Common.ViewModels;assembly=Germadent.Client.Common"
         mc:Ignorable="d"
         Title="{Binding Title}" 
         MinWidth="1024"
@@ -161,7 +162,7 @@
             </DataGrid.InputBindings>
             <DataGrid.RowStyle>
                 <Style TargetType="{x:Type DataGridRow}" BasedOn="{StaticResource DataGridRowStyle}"
-                       d:DataContext="{d:DesignInstance Type=viewModels:OrderLiteViewModel, IsDesignTimeCreatable=True}">
+                       d:DataContext="{d:DesignInstance Type={x:Type viewModelsCommon:OrderLiteViewModel}, IsDesignTimeCreatable=True}">
                     <EventSetter Event="PreviewMouseDoubleClick" Handler="OnOrderRowDoubleClick"/>
                     <Setter Property="Tag" Value="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=DataGrid}, Path=DataContext}"/>
                     <Setter Property="ContextMenu">
@@ -178,6 +179,18 @@
                         </Setter.Value>
                     </Setter>
                     <Style.Triggers>
+                        <DataTrigger Binding="{Binding IsLocked}" Value="True">
+                            <Setter Property="Opacity" Value="0.6"/>
+                            <Setter Property="ToolTip">
+                                <Setter.Value>
+                                    <TextBlock>
+                                        <Run Text="Заказ-наряд заблокировал пользователь "/>
+                                        <Run Text="{Binding LockedBy.FullName, Mode=OneWay}"
+                                             FontWeight="SemiBold"/>
+                                    </TextBlock>
+                                </Setter.Value>
+                            </Setter>
+                        </DataTrigger>
                         <MultiDataTrigger>
                             <MultiDataTrigger.Conditions>
                                 <Condition Binding="{Binding IsClosed}" Value="True"/>
@@ -218,7 +231,10 @@
                                     Binding="{Binding Model.CreatorFullName}"/>
                 <DataGridTextColumn Header="Статус" ElementStyle="{StaticResource DataGridTextBlockStyle}"  Width="*"
                                     helpers:DataGridColumnNameHelper.Name="General_ColumnStatus"
-                                    Binding="{Binding Model.Status}"/>
+                                    Binding="{Binding Model.Status, Converter={StaticResource OrderStatusToStringConverter}}"/>
+                <DataGridTextColumn Header="Блокировка" ElementStyle="{StaticResource DataGridTextBlockStyle}" MinWidth="100" Width="100"
+                                    helpers:DataGridColumnNameHelper.Name="General_LockInfo"
+                                    Binding="{Binding LockInfo}"/>
                 <DataGridTextColumn Header="Закрыт" ElementStyle="{StaticResource DataGridTextBlockStyle}" Width="*"
                                     helpers:DataGridColumnNameHelper.Name="General_ColumnClosed"
                                     Binding="{Binding Model.Closed, StringFormat='dd.MM.yyyy HH:mm'}"/>
